<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Sandlot</string>
    <string name="search">Search</string>
    <string name="clear">Clear</string>
    <string name="title">NDL Search</string>
    <string name="msg_loading">Now Loading … </string>
    <string name="msg_analyzing">Now Analyzing … </string>
    <string name="type">type</string>
    <string name="value">Value</string>
    <string name="pref_cat_search">Search Preference</string>
    <string name="pref_cat_result">Result Preference</string>
    <string name="pref_count_name">Result Count</string>
    <string name="pref_count_summary">Settings for result counts with each fetching</string>
    <string name="pref_result_display_name">Result Display</string>
    <string name="pref_result_display_summary">Go to content with browser by single tap</string>
    
    <string name="content_creator">Creator</string>
    <string name="content_category">Category</string>
    <string name="content_published">Published</string>
    <string name="content_show_details">Show Details</string>
    
    <!-- no i18n  -->
    <string name="pref_key_count">count</string>
    <string name="pref_key_result_display">result_display</string>
    
</resources>